--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <input class="toggle" type="checkbox" />
 .toggle {
   -webkit-appearance: none;
@@ -46,3 +47,4 @@
 .toggle:checked:before {
   left: 32px;
 }
+</html>
